Fix Reset password page elements overlapping each other, update error messages

--- a/src/pages/password-reset/create-new-password/PasswordReset.module.css
+++ b/src/pages/password-reset/create-new-password/PasswordReset.module.css
@@ -1,34 +1,7 @@
-* {
+ * {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-}
-
-.resetPasswordHeader {
-	width: 400px;
-	margin-bottom: 2rem;
-}
-
-.headerTitle {
-	white-space: nowrap;
-	font-weight: 400;
-	font-size: 2rem;
-	line-height: 2rem;
-	text-align: center;
-
-}
-
-p {
-	font-size: 1em;
-	width: 27rem;
-}
-
-p.errorMessage {
-	color: #ff5252;
-}
-
-body {
-	min-height: 100vh;
 }
 
 .resetPasswordSection {
@@ -39,40 +12,19 @@ body {
 	transform: translate(-50%, -50%);
 }
 
-.textInputError {
-	border-color: #ff5252;
-}
-
-.textInputError:focus {
-	border-width: 2px;
-}
-
-.textInput,
-.textInputError {
-	border-radius: 8px;
-	border: 1px solid #dddddd;
+.resetPasswordHeader {
 	width: 400px;
-	height: 3rem;
-	gap: 10px;
-	box-sizing: border-box;
-	outline: none;
-	font-family: 'Inter';
-	font-size: 1em;
-	padding-left: 1rem;
-	padding-right: 1rem;
 }
-.textInput::placeholder {
-	color: #999999;
-	font-size: 1em;
-	height: 3em;
-	line-height: 16px;
-	flex: none;
-	order: 0;
-	flex-grow: 0;
-	font-family: 'Inter';
+
+.headerTitle {
+	white-space: nowrap;
+	font-weight: 400;
+	font-size: 2rem;
+	line-height: 2rem;
+	text-align: center;
 }
-.textInput:focus {
-	border: 2px solid #dddddd;
-	color: #2e2929;
-	padding-left: 1rem;
+
+.buttonWrapper {
+	margin-top: 2rem;
 }
+
